--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=8087
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/ps-demo
+spring.datasource.username=postgres
+spring.datasource.password=pass123
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
